before image download change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,6 +186,8 @@
     <string name="favorited">Favorited</string>
     <string name="added_to_favorites">Added to favorites</string>
     <string name="removed_from_favorites">Removed from favorites</string>
+    <string name="thank_you">Thank you for upgrading to Fields Plus. </string>
+    <string name="appreciate">We appreciate dedicated players like you. Hope you enjoy your new features!</string>
 
 
 
