events now get deleted from detailfield

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,6 +190,7 @@
     <string name="appreciate">We appreciate dedicated players like you. Hope you enjoy your new features!</string>
     <string name="favorite_fields">Favorite Fields</string>
     <string name="you_havent_added_favorite_fields">You haven\'t added favorite fields. Do so by searching a field and pressing the star icon on the top bar!</string>
+    <string name="start_training_by">Start training by searching the desired field!</string>
 
 
     <string name="next">NEXT</string>
