--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,6 +191,7 @@
     <string name="favorite_fields">Favorite Fields</string>
     <string name="you_havent_added_favorite_fields">You haven\'t added favorite fields. Do so by searching a field and pressing the star icon on the top bar!</string>
     <string name="start_training_by">Start training by searching the desired field!</string>
+    <string name="new_followers">New Followers</string>
 
 
     <string name="next">NEXT</string>
