push before changes to database formatting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,7 +197,7 @@
     <string name="account_deleted">Account deleted</string>
 
 
-    <string name="privacy_policy_text">Privacy Policy</string>
+    <string name="terms_and_conditions">Terms and Conditions</string>
 
 
     <string name="next">NEXT</string>
